2007-01-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-backend): Rename from `mixi-retrieve-function' and
	change the default value to `w3m'.
	(mixi-retrieve): Follow the change above.
	(mixi-post-form): Ditto.
	(mixi-login): Ditto.

2007-01-08  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-reply-to): New variable.
	(shimbun-reply-to): New method.
	(shimbun-mixi-make-reply-to): New function.
	(shimbun-article): Use it.
	(shimbun-mixi-make-object-from-message-id): Abolish.
	(shimbun-mixi-to-regexp): New constant.
	(shimbun-mixi-send-mail-wrapper): Follow the change above.

2006-12-30  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-event-owner-seceded-regexp): New regexp.
	(mixi-realize-event): Follow the change above.

2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-message-id-suffix): Abolish.
	(shimbun-mixi-make-message-id): Revert.

2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-send-mail-wrapper): New function.

2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-message-id-suffix): New constant.
	(shimbun-mixi-make-message-id): Use it and change return value.
	(shimbun-mixi-make-object-from-message-id): New function.

2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-logout-p): Abolish.
	(shimbun-close): Follow the change above.

2006-12-27  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-message-page): New macro.
	(mixi-post-message-key-regexp): New constant.
	(mixi-post-message-succeed-regexp): Ditto.
	(mixi-post-message): New function.

2006-12-27  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-diary-id-regexp): Abolish.
	(mixi-post-diary-title-regexp): Ditto.
	(mixi-post-diary-body-regexp): Ditto.
	(mixi-post-key-regexp): Rename from `mixi-post-diary-key-regex'.
	(mixi-post-succeed-regexp): Rename from
	`mixi-post-diary-succeed-regexp'.
	(mixi-post-diary): Follow the change above.