@@ -1,3 +1,10 @@
+2007-01-09  OHASHI Akira  <bg66@koka-in.org>
+
+	* mixi-gnus.el: New file.
+
+	* sb-mixi.el (shimbun-mixi-send-mail): Rename from
+	`shimbun-mixi-send-mail-wrapper'.
+
 2007-01-08  OHASHI Akira  <bg66@koka-in.org>
 
 	* mixi.el (mixi-backend): Rename from `mixi-retrieve-function' and
